Адаптив шапки и кнопок

--- a/css/activity/_menu-open.scss
+++ b/css/activity/_menu-open.scss
@@ -1,4 +1,5 @@
 .menu-open {
+  overflow: hidden;
   .mobile-navigation {
     left: 0;
     visibility: initial;
@@ -23,7 +24,12 @@
 
     width: 16px;
   }
-  .header__navigation {
-    left: 0;
+
+  .header {
+    box-shadow: none !important;
+    background-color: #fff;
+  }
+  .header:after {
+    opacity: 0.15;
   }
 }
