--- a/css/main.scss
+++ b/css/main.scss
@@ -6,9 +6,6 @@
 @import "./base/support";
 
 // blocks
-// @import "./blocks/hero";
-// @import "./blocks/accordion";
-// @import "./blocks/button";
 @import "./blocks/button";
 @import "./blocks/main";
 @import "./blocks/wrapper";
@@ -17,42 +14,20 @@
 
 @import "./blocks/main-navigation";
 @import "./blocks/link";
-// @import "./blocks/search";
-// @import "./blocks/social";
 @import "./blocks/button-menu";
 @import "./blocks/logotype";
-// @import "./blocks/item-tag";
-// @import "./blocks/figure";
-// @import "./blocks/preview-card";
-// @import "./blocks/form";
-// @import "./blocks/swiper-button";
-// @import "./blocks/review-card";
-// @import "./blocks/partner-card";
-// @import "./blocks/transform";
-// @import "./blocks/breadcrumbs";
-// @import "./blocks/custom-review";
-// @import "./blocks/photo-slider";
-// @import "./blocks/big-cite";
-// @import "./blocks/articles-list";
-// @import "./blocks/catalog-filter";
+@import "./blocks/fixed-group";
+@import "./blocks/buttons-grid";
 
 // sections
 @import "./sections/header";
+@import "./sections/mobile-navigation";
+@import "./sections/hero";
 
-// @import "./sections/section";
-// @import "./sections/inner-top";
-// @import "./sections/hero-home";
-// @import "./sections/items-tags";
-// @import "./sections/previews";
-// @import "./sections/contact-us";
-// @import "./sections/advantages";
-// @import "./sections/reviews";
-// @import "./sections/partners";
-// @import "./sections/decorative-map";
-// @import "./sections/article-full";
+@import "./sections/section";
 
-// @import "./sections/footer";
-// @import "./sections/modal";
+@import "./sections/footer";
+@import "./sections/modal";
 
 // pages
 // @import "./pages/page";
