--- a/css/blocks/_link.scss
+++ b/css/blocks/_link.scss
@@ -8,6 +8,7 @@
   transition: all 0.3s;
   position: relative;
   color: var(--orange);
+
   &::after {
     content: "";
     display: block;
@@ -21,6 +22,13 @@
     left: 0;
   }
 
+  &--mod {
+    color: var(--dark);
+    &::after {
+      display: none;
+    }
+  }
+
   &:hover,
   &:active,
   &:focus {
@@ -31,11 +39,11 @@
       opacity: 1;
     }
   }
-}
 
-.link--mod {
-  color: var(--dark);
-  &::after {
-    display: none;
+  @media (max-width: 767px) {
+    font-size: 12px;
+    font-weight: 500;
   }
 }
+
+
