--- a/css/main.css
+++ b/css/main.css
@@ -476,7 +476,7 @@ input[type=radio].visually-hidden {
       -ms-flex-align: center;
           align-items: center;
   gap: 10px;
-  grid-template-columns: auto 1fr;
+  grid-template-columns: repeat(2, auto);
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -508,20 +508,6 @@ input[type=radio].visually-hidden {
     padding: 0 20px;
     width: 100%;
     max-width: 100%;
-  }
-}
-
-.main {
-  padding-top: 96px;
-}
-@media (max-width: 1023px) {
-  .main {
-    padding-top: 80px;
-  }
-}
-@media (max-width: 767px) {
-  .main {
-    padding-top: 80px;
   }
 }
 
@@ -807,6 +793,10 @@ input[type=radio].visually-hidden {
   max-width: max-content;
   grid-template-columns: repeat(2, auto);
 }
+.buttons-grid .button {
+  padding-inline: 20px;
+  max-width: 100%;
+}
 @media (max-width: 767px) {
   .buttons-grid {
     gap: 10px;
@@ -820,24 +810,10 @@ input[type=radio].visually-hidden {
   background-color: transparent;
   -webkit-transition: background-color all 0.3s;
   transition: background-color all 0.3s;
-  position: relative;
   z-index: 3;
   padding: 0;
   color: var(--dark);
-}
-.header:after {
-  content: "";
-  display: block;
-  width: 90%;
-  position: absolute;
-  left: 5%;
-  right: 5%;
-  bottom: 0;
-  background: var(--dark);
-  opacity: 0;
-  height: 1px;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
+  position: relative;
 }
 .header__grid {
   display: grid;
@@ -846,6 +822,18 @@ input[type=radio].visually-hidden {
       -ms-flex-align: center;
           align-items: center;
   grid-template-columns: auto 1fr auto;
+  position: relative;
+}
+.header__grid:after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 1px;
+  background: var(--dark);
+  opacity: 0.15;
+  position: absolute;
+  left: 0;
+  bottom: 0;
 }
 .header__left {
   width: 100%;
@@ -880,12 +868,10 @@ input[type=radio].visually-hidden {
   }
 }
 @media (max-width: 1023px) {
-  .header {
-    padding-top: 8px;
-    padding-bottom: 8px;
-  }
   .header__grid {
     grid-template-columns: auto 1fr;
+    padding-top: 8px;
+    padding-bottom: 8px;
   }
   .header__left {
     display: grid;
@@ -915,7 +901,7 @@ input[type=radio].visually-hidden {
   }
 }
 @media (max-width: 767px) {
-  .header {
+  .header__grid {
     padding-top: 10px;
     padding-bottom: 10px;
   }
@@ -1056,16 +1042,109 @@ input[type=radio].visually-hidden {
 }
 
 .hero {
-  min-height: 100vh;
+  min-height: 736px;
+  background-image: url(../img/hero/bg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-top: 156px;
+  padding-bottom: 60px;
+  position: relative;
+}
+.hero__grid {
+  display: grid;
+  gap: 32px;
+  grid-template-columns: repeat(2, 1fr);
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  position: relative;
 }
 .hero__text {
   margin: 0;
-  margin-bottom: initial;
   font-size: 18px;
+  margin-bottom: 10px;
 }
 .hero__title {
-  margin-bottom: 27px;
+  font-size: 64px;
+  margin-bottom: 20px;
 }
+.hero__image {
+  width: auto;
+  height: 650px;
+  top: -90px;
+  display: block;
+  margin-bottom: 0;
+  position: absolute;
+  right: 10%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+.hero__video {
+  position: absolute;
+  width: 100%;
+  z-index: 0;
+  pointer-events: none;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+.hero__video video {
+  display: block;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+@media (max-width: 1380px) {
+  .hero__grid {
+    grid-template-columns: 9fr 3fr;
+  }
+  .hero__image {
+    right: 0;
+    top: -75px;
+  }
+}
+@media (max-width: 1023px) {
+  .hero {
+    min-height: initial;
+    padding-top: 133px;
+  }
+  .hero__grid {
+    grid-template-columns: 1fr;
+    gap: 0;
+  }
+  .hero__image {
+    position: initial;
+    max-width: -webkit-max-content;
+    max-width: -moz-max-content;
+    max-width: max-content;
+    margin-left: auto;
+    margin-top: -70px;
+  }
+}
+@media (max-width: 767px) {
+  .hero {
+    padding-top: 82px;
+  }
+  .hero__grid {
+    gap: 32px;
+  }
+  .hero__text {
+    margin: 0;
+    font-size: 16px;
+  }
+  .hero__title {
+    font-size: 40px;
+  }
+  .hero__image {
+    margin-left: initial;
+    margin-top: initial;
+    max-height: 420px;
+    margin: 0 auto;
+  }
+}
+
 .modal {
   position: fixed;
   z-index: 9999;
@@ -1158,6 +1237,9 @@ input[type=radio].visually-hidden {
   -webkit-box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2);
           box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2);
 }
+.header-sticky .header__grid::after {
+  opacity: 0;
+}
 .header-sticky .header__logo .logotype svg {
   width: 102px;
 }
@@ -1193,5 +1275,8 @@ input[type=radio].visually-hidden {
   background-color: #fff;
 }
 .menu-open .header:after {
+  opacity: 0.15;
+}
+.menu-open .header__grid::after {
   opacity: 0.15;
 }/*# sourceMappingURL=main.css.map */
