--- a/css/blocks/_button.scss
+++ b/css/blocks/_button.scss
@@ -85,7 +85,7 @@
     display: grid;
     align-items: center;
     gap: 10px;
-    grid-template-columns: auto 1fr;
+    grid-template-columns: repeat(2, auto);
     justify-content: center;
   }
 
