--- a/css/sections/_header.scss
+++ b/css/sections/_header.scss
@@ -1,31 +1,31 @@
 .header {
   background-color: transparent;
   transition: background-color all 0.3s;
-  position: relative;
   z-index: 3;
   // padding-top: 16px;
   // padding-bottom: 16px;
   padding: 0;
   color: var(--dark);
-  &:after {
-    content: "";
-    display: block;
-    width: 90%;
-    position: absolute;
-    left: 5%;
-    right: 5%;
-    bottom: 0;
-    background: var(--dark);
-    opacity: 0;
-    height: 1px;
-    transition: all 0.3s;
-  }
+  position: relative;
 
   &__grid {
     display: grid;
     gap: 32px;
     align-items: center;
     grid-template-columns: auto 1fr auto;
+    position: relative;
+
+    &:after {
+      content: "";
+      display: block;
+      width: 100%;
+      height: 1px;
+      background: var(--dark);
+      opacity: 0.15;
+      position: absolute;
+      left: 0;
+      bottom: 0;
+    }
   }
 
   &__logo {
@@ -70,10 +70,10 @@
   }
 
   @media (max-width: 1023px) {
-    padding-top: 8px;
-    padding-bottom: 8px;
     &__grid {
       grid-template-columns: auto 1fr;
+      padding-top: 8px;
+      padding-bottom: 8px;
     }
     &__left {
       display: grid;
@@ -98,8 +98,11 @@
   }
 
   @media (max-width: 767px) {
-    padding-top: 10px;
-    padding-bottom: 10px;
+    &__grid {
+      padding-top: 10px;
+      padding-bottom: 10px;
+    }
+
     &__left {
       gap: 10px;
     }
