--- a/css/sections/_hero.scss
+++ b/css/sections/_hero.scss
@@ -1,19 +1,106 @@
 .hero {
-  min-height: 100vh;
+  min-height: 736px;
+
+  background-image: url(../img/hero/bg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-top: calc(96px + 60px);
+  padding-bottom: 60px;
+  position: relative;
+
+  &__grid {
+    display: grid;
+    gap: 32px;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: flex-start;
+    position: relative;
+  }
   &__text {
     margin: 0;
-    margin-bottom: initial;
     font-size: 18px;
+    margin-bottom: 10px;
   }
   &__title {
-    margin-bottom: 27px;
+    font-size: 64px;
+    margin-bottom: 20px;
   }
 
-  &__link {
+  &__image {
+    // height: 100%;
+    // margin-top: -80px;
+    width: auto;
+    height: 650px;
+    top: -90px;
+    display: block;
+    margin-bottom: 0;
+    position: absolute;
+    right: 10%;
+    object-fit: contain;
+  }
+  &__video {
+    position: absolute;
+    width: 100%;
+    z-index: 0;
+    pointer-events: none;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+
+    video {
+      display: block;
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  @media (max-width: 1380px) {
+    &__grid {
+      grid-template-columns: 9fr 3fr;
+    }
+
+    &__image {
+      right: 0;
+      top: -75px;
+    }
+
 
   }
 
-  // @media (max-width:1023px) {
-  //   min-height: 1024px;
-  // }
+  @media (max-width: 1023px) {
+    min-height: initial;
+    padding-top: 133px;
+    &__grid {
+      grid-template-columns: 1fr;
+      gap: 0;
+    }
+    &__image {
+      position: initial;
+      max-width: max-content;
+      margin-left: auto;
+      margin-top: -70px;
+    }
+  }
+
+  @media (max-width: 767px) {
+    padding-top: 82px;
+    &__grid {
+      gap: 32px;
+    }
+
+    &__text {
+      margin: 0;
+      font-size: 16px;
+    }
+    &__title {
+      font-size: 40px;
+    }
+    &__image {
+      margin-left: initial;
+      margin-top: initial;
+      max-height: 420px;
+      margin: 0 auto;
+    }
+  }
 }
