--- a/css/blocks/_button.scss
+++ b/css/blocks/_button.scss
@@ -17,7 +17,7 @@
   padding: 0 40px;
 
   font-weight: 500;
-  font-size: 16px;
+  font-size: 15px;
   line-height: 100%;
   color: var(--white);
   position: relative;
@@ -41,6 +41,10 @@
   }
 
   span {
+    position: relative;
+    z-index: 2;
+  }
+  svg {
     position: relative;
     z-index: 2;
   }
@@ -79,7 +83,7 @@
   &--icon {
     display: grid;
     align-items: center;
-    gap: 10px;
+    gap: 8px;
     grid-template-columns: repeat(2, auto);
     justify-content: center;
   }
